--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <div id="unity-container" style="width: 100%; height: 100%; display:flex; justify-content: center; align-items: center;">
-      <canvas id="unity-canvas" width=3200  height=1800 > </canvas>
+      <canvas id="unity-canvas" width=3200 height=1800></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
+   
       </div>
      <!-- <div id="unity-warning"> </div>
       <div id="unity-footer">
@@ -22,7 +23,7 @@
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">RaceCade</div>
       </div>
-    </div>-->
+    </div> -->
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -56,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl.loader.js";
+      var loaderUrl = buildUrl + "/NewBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl.data.unityweb",
-        frameworkUrl: buildUrl + "/webgl.framework.js.unityweb",
-        codeUrl: buildUrl + "/webgl.wasm.unityweb",
+        dataUrl: buildUrl + "/NewBuild.data.unityweb",
+        frameworkUrl: buildUrl + "/NewBuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/NewBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CoinCade",
         productName: "RaceCade",
@@ -106,7 +107,6 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          
         }).catch((message) => {
           alert(message);
         });
