--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>RaceCade</title>
-    <link rel="shortcut icon" href="icon.png">
+    <title>Unity WebGL Player | RaceCade</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
-    <div id="unity-container" style="width: 100%; height: 100%; display:flex; justify-content: center; align-items: center;">
-      <canvas id="unity-canvas" width=3200 height=1800></canvas>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
-   
       </div>
-     <!-- <div id="unity-warning"> </div>
+      <div id="unity-warning"> </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">RaceCade</div>
       </div>
-    </div> -->
+    </div>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -57,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/NewBuild.loader.js";
+      var loaderUrl = buildUrl + "/RaceCade v1.01 New.loader.js";
       var config = {
-        dataUrl: buildUrl + "/NewBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/NewBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/NewBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/RaceCade v1.01 New.data.unityweb",
+        frameworkUrl: buildUrl + "/RaceCade v1.01 New.framework.js.unityweb",
+        codeUrl: buildUrl + "/RaceCade v1.01 New.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CoinCade",
         productName: "RaceCade",
@@ -74,7 +73,7 @@
       // Set this to false if you want to decouple this synchronization from
       // happening inside the engine, and you would instead like to size up
       // the canvas DOM size and WebGL render target sizes yourself.
-       config.matchWebGLToCanvasSize = false;
+      // config.matchWebGLToCanvasSize = false;
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -94,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
@@ -107,6 +106,9 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
         }).catch((message) => {
           alert(message);
         });
